fix: update ac-14.md

--- a/md_components/acme-component-definition/appid/source_001/ac/ac-14.md
+++ b/md_components/acme-component-definition/appid/source_001/ac/ac-14.md
@@ -20,6 +20,8 @@ x-trestle-global:
 
 - \[b.\] Document and provide supporting rationale in the security plan for the system, user actions not requiring identification or authentication.
 
+- \[c.\] Additional control statement information...
+
 ## Control Assessment Objective
 
 - \[AC-14a.\] {{ insert: param, ac-14_odp }} that can be performed on the system without identification or authentication consistent with organizational mission and business functions are identified;
